--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 </head>
 <body class="mat-typography">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/db0eefa77a.js" crossorigin="anonymous"></script>
   <app-root></app-root>
 </body>
 </html>
