--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,13 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="https://unpkg.com/primeflex@^3/primeflex.css">
-            
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+         
 
 </head>
 <body>
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
